--- a/.github/workflows/pg_workflow.yml
+++ b/.github/workflows/pg_workflow.yml
@@ -1,4 +1,4 @@
-name: Postgres MCP
+name: Release PostgreSQL MCP
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - 'v*'
 
 jobs:
-  Publish:
+  Publish-Github-Release:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: '1.25.3'
+          go-version: '1.25.0'
       - run: go version
 
       - name: Install dependencies
@@ -50,3 +50,34 @@ jobs:
             checksums-pg-mcp.txt \
             --title "PostgreSQL MCP Server ${{ github.ref_name }}" \
             --generate-notes
+
+  Publish-Docker-Release:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: '1.25.3'
+      - run: go version
+
+      - name: Install dependencies
+        run: |
+          go mod download
+
+      - name: Build docker image
+        run: |
+          docker build . --build-arg VERSION=${{ github.ref_name }} -t loadept/pg-mcp:${{ github.ref_name }}
+
+      - name: Push docker image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          docker push loadept/pg-mcp:${{ github.ref_name }}
