fix: update docker login command to use password-stdin for security

--- a/.github/workflows/pg_workflow.yml
+++ b/.github/workflows/pg_workflow.yml
@@ -79,5 +79,5 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
           docker push loadept/pg-mcp:${{ github.ref_name }}
