--- a/.github/workflows/docker_latest_workflow.yml
+++ b/.github/workflows/docker_latest_workflow.yml
@@ -34,5 +34,5 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
           docker push loadept/pg-mcp
