--- a/.github/workflows/pg_workflow.yml
+++ b/.github/workflows/pg_workflow.yml
@@ -76,8 +76,8 @@ jobs:
 
       - name: Push docker image
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
           docker push loadept/pg-mcp:${{ github.ref_name }}
