feat: refactor build process and update README for improved clarity

--- a/.github/workflows/pg_workflow.yml
+++ b/.github/workflows/pg_workflow.yml
@@ -29,8 +29,8 @@ jobs:
         run: |
           VERSION=$(git describe --tags --abbrev=0)
 
-          GOOS=windows GOARCH=amd64 go build -ldflags "-X main.VERSION=$VERSION" -o pg-mcp.exe cmd/pg-mcp/main.go
-          GOOS=linux GOARCH=amd64 go build -ldflags "-X main.VERSION=$VERSION" -o pg-mcp cmd/pg-mcp/main.go
+          GOOS=windows GOARCH=amd64 go build -ldflags "-X main.VERSION=$VERSION" -o pg-mcp.exe .
+          GOOS=linux GOARCH=amd64 go build -ldflags "-X main.VERSION=$VERSION" -o pg-mcp .
 
       - name: Package applications
         run: |
